# rest-skeleton

./: .gitignore  bun.lockb  package.json
app/: page.tsx
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/config/: mod.rs
server/src/database/: init.sql
server/src/middlewares/: mod.rs
server/src/routes/: create_user.rs  crud.rs  db_config.rs  mod.rs  root.rs
