[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.125"
tracing = "0.1.40"
tower-http = { version = "0.5.2", features = ["cors"] }
tower = "0.5.0"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
cargo-watch = "8.5.2"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
dotenvy = "0.15.7"
